Resolves tdf#84240 : Red squiggly underline does not appear instantly

Change-Id: I62d1b381ba8373cfa637f5838d5ef31691f4c260
Reviewed-on: https://gerrit.libreoffice.org/14872
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Eike Rathke <erack@redhat.com>