sc/source/ui/view/viewfun2.cxx
@@ -56,6 +56,7 @@
 #include "docfunc.hxx"
 #include "docpool.hxx"
 #include "docsh.hxx"
+#include "docoptio.hxx"
 #include "global.hxx"
 #include "patattr.hxx"
 #include "printfun.hxx"
@@ -1204,6 +1205,10 @@ void ScViewFunc::FillSimple( FillDir eDir, bool bRecord )
         {
             pDocSh->UpdateOle(&GetViewData());
             UpdateScrollBars();
+            bool bDoAutoSpell = pDocSh->GetDocument().GetDocOptions().IsAutoSpell();
+            if ( bDoAutoSpell )
+                CopyAutoSpellData(eDir, aRange.aStart.Col(), aRange.aStart.Row(), aRange.aEnd.Col(), aRange.aEnd.Row(),
+                        ::std::numeric_limits<sal_uLong>::max());
         }
     }
     else
@@ -1249,6 +1254,10 @@ void ScViewFunc::FillAuto( FillDir eDir, SCCOL nStartCol, SCROW nStartRow,
         pDocSh->UpdateOle(&GetViewData());
         UpdateScrollBars();
 
+        bool bDoAutoSpell = pDocSh->GetDocument().GetDocOptions().IsAutoSpell();
+        if ( bDoAutoSpell )
+            CopyAutoSpellData(eDir, nStartCol, nStartRow, nEndCol, nEndRow, nCount);
+
         if (ScModelObj* pModelObj = HelperNotifyChanges::getMustPropagateChangesModel(*pDocSh))
         {
             ScRangeList aChangeRanges;
@@ -1274,6 +1283,139 @@ void ScViewFunc::FillAuto( FillDir eDir, SCCOL nStartCol, SCROW nStartRow,
             HelperNotifyChanges::Notify(*pModelObj, aChangeRanges);
         }
     }
+}
+
+void ScViewFunc::CopyAutoSpellData( FillDir eDir, SCCOL nStartCol, SCROW nStartRow,
+                                   SCCOL nEndCol, SCROW nEndRow, sal_uLong nCount )
+{
+    ScGridWindow* pWin = this->GetActiveWin();
+    if ( pWin->InsideVisibleRange(nStartCol, nStartRow) && pWin->InsideVisibleRange(nEndCol, nEndRow) )
+    {
+        if ( nCount == ::std::numeric_limits<sal_uLong>::max() )
+        {
+            switch( eDir )
+            {
+                case FILL_TO_BOTTOM:
+                    for ( SCCOL nColItr = nStartCol; nColItr <= nEndCol; ++nColItr )
+                    {
+                        const std::vector<editeng::MisspellRanges>* pRanges = pWin->GetAutoSpellData(nColItr, nStartRow);
+                        if ( !pRanges )
+                            continue;
+                        for ( SCROW nRowItr = nStartRow + 1; nRowItr <= nEndRow; ++nRowItr )
+                            pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                    break;
+                case FILL_TO_TOP:
+                    for ( SCCOL nColItr = nStartCol; nColItr <= nEndCol; ++nColItr )
+                    {
+                        const std::vector<editeng::MisspellRanges>* pRanges = pWin->GetAutoSpellData(nColItr, nEndRow);
+                        if ( !pRanges )
+                            continue;
+                        for ( SCROW nRowItr = nEndRow - 1; nRowItr >= nStartRow; --nRowItr )
+                            pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                    break;
+                case FILL_TO_RIGHT:
+                    for ( SCROW nRowItr = nStartRow; nRowItr <= nEndRow; ++nRowItr )
+                    {
+                        const std::vector<editeng::MisspellRanges>* pRanges = pWin->GetAutoSpellData(nStartCol, nRowItr);
+                        if ( !pRanges )
+                            continue;
+                        for ( SCCOL nColItr = nStartCol + 1; nColItr <= nEndCol; ++nColItr )
+                            pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                    break;
+                case FILL_TO_LEFT:
+                    for ( SCROW nRowItr = nStartRow; nRowItr <= nEndRow; ++nRowItr )
+                    {
+                        const std::vector<editeng::MisspellRanges>* pRanges = pWin->GetAutoSpellData(nEndCol, nRowItr);
+                        if ( !pRanges )
+                            continue;
+                        for ( SCCOL nColItr = nEndCol - 1; nColItr >= nStartCol; --nColItr )
+                            pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                    break;
+            }
+            return;
+        }
+
+        typedef const std::vector<editeng::MisspellRanges>* MisspellRangesType;
+        SCROW nRowRepeatSize = (nEndRow - nStartRow + 1);
+        SCCOL nColRepeatSize = (nEndCol - nStartCol + 1);
+        SCROW nTillRow = 0;
+        SCCOL nTillCol = 0;
+        std::vector<std::vector<MisspellRangesType>> aSourceSpellRanges(nRowRepeatSize, std::vector<MisspellRangesType>(nColRepeatSize));
+
+        for ( SCROW nRowIdx = 0; nRowIdx < nRowRepeatSize; ++nRowIdx )
+            for ( SCROW nColIdx = 0; nColIdx < nColRepeatSize; ++nColIdx )
+                aSourceSpellRanges[nRowIdx][nColIdx] = pWin->GetAutoSpellData( nStartCol + nColIdx, nStartRow + nRowIdx );
+
+        switch( eDir )
+        {
+            case FILL_TO_BOTTOM:
+                nTillRow = nEndRow + nCount;
+                for ( SCCOL nColItr = nStartCol; nColItr <= nEndCol; ++nColItr )
+                {
+                    for ( SCROW nRowItr = nEndRow + 1; nRowItr <= nTillRow; ++nRowItr )
+                    {
+                        size_t nSourceRowIdx = ( ( nRowItr - nEndRow - 1 ) % nRowRepeatSize );
+                        MisspellRangesType pRanges = aSourceSpellRanges[nSourceRowIdx][nColItr - nStartCol];
+                        if ( !pRanges )
+                            continue;
+                        pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                }
+                break;
+
+            case FILL_TO_TOP:
+                nTillRow = nStartRow - nCount;
+                for ( SCCOL nColItr = nStartCol; nColItr <= nEndCol; ++nColItr )
+                {
+                    for ( SCROW nRowItr = nStartRow - 1; nRowItr >= nTillRow; --nRowItr )
+                    {
+                        size_t nSourceRowIdx = nRowRepeatSize - 1 - ( ( nStartRow - 1 - nRowItr ) % nRowRepeatSize );
+                        MisspellRangesType pRanges = aSourceSpellRanges[nSourceRowIdx][nColItr - nStartCol];
+                        if ( !pRanges )
+                            continue;
+                        pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                }
+                break;
+
+            case FILL_TO_RIGHT:
+                nTillCol = nEndCol + nCount;
+                for ( SCCOL nColItr = nEndCol + 1; nColItr <= nTillCol; ++nColItr )
+                {
+                    size_t nSourceColIdx = ( ( nColItr - nEndCol - 1 ) % nColRepeatSize );
+                    for ( SCROW nRowItr = nStartRow; nRowItr <= nEndRow; ++nRowItr )
+                    {
+                        MisspellRangesType pRanges = aSourceSpellRanges[nRowItr - nStartRow][nSourceColIdx];
+                        if ( !pRanges )
+                            continue;
+                        pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                }
+                break;
+
+            case FILL_TO_LEFT:
+                nTillCol = nStartCol - nCount;
+                for ( SCCOL nColItr = nStartCol - 1; nColItr >= nTillCol; --nColItr )
+                {
+                    size_t nSourceColIdx = nColRepeatSize - 1 - ( ( nStartCol - 1 - nColItr ) % nColRepeatSize );
+                    for ( SCROW nRowItr = nStartRow; nRowItr <= nEndRow; ++nRowItr )
+                    {
+                        MisspellRangesType pRanges = aSourceSpellRanges[nRowItr - nStartRow][nSourceColIdx];
+                        if ( !pRanges )
+                            continue;
+                        pWin->SetAutoSpellData(nColItr, nRowItr, pRanges);
+                    }
+                }
+                break;
+        }
+    }
+    else
+        pWin->ResetAutoSpell();
+
 }
 
 void ScViewFunc::FillTab( InsertDeleteFlags nFlags, sal_uInt16 nFunction, bool bSkipEmpty, bool bAsLink )
